# galrad

./: LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/galrad/: index.rst
galrad/: IonizationModel.py  LMCtoGalCoord.py  conftest.py
galrad/data/: Fox+2005_MW.sed  egb_Fox2014.sed  mw_ionizing_field.txt
galrad/example_subpkg/: setup_package.py
licenses/: LICENSE.rst
