[metadata]
name = galrad
author = Dhanesh Krishnarao (DK)
author_email = dkrishnarao@coloradocollege.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = www.astronomy.dk
description = Milky Way Radiation Field and Ionization Photon Flux Tool
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/astropy

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy
    numpy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
galrad = data/*

[tool:pytest]
testpaths = "galrad" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    galrad/_astropy_init*
    galrad/conftest.py
    galrad/*setup_package*
    galrad/tests/*
    galrad/*/tests/*
    galrad/extern/*
    galrad/version*
    */galrad/_astropy_init*
    */galrad/conftest.py
    */galrad/*setup_package*
    */galrad/tests/*
    */galrad/*/tests/*
    */galrad/extern/*
    */galrad/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
